# cafe-engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakeLists_web.cmake
docs/: README.md  ROADMAP.md
docs/architecture/: 00-overview.md  01-platform-layer.md  02-rendering-system.md  03-game-loop.md  04-entity-system.md  05-resource-management.md  06-audio-system.md  07-input-system.md  08-ui-system.md  09-save-system.md
docs/game-design/: 00-game-overview.md  01-economy-system.md  02-customer-simulation.md  03-time-system.md  04-future-features.md
docs/guides/: cpp-fundamentals.md  debugging-guide.md  emscripten-setup.md  github-workflow.md  macos-dev-setup.md
docs/phases/phase-1-cpp-foundations/: overview.md
docs/phases/phase-2-platform-mac/: overview.md
docs/phases/phase-3-renderer-abstraction/: implementation-summary.md  overview.md
docs/phases/phase-4-core-engine/: overview.md
docs/phases/phase-5-game-framework/: overview.md
docs/phases/phase-6-cafe-core-loop/: overview.md
docs/phases/phase-7-additional-platforms/: overview.md
docs/phases/phase-8-content-release/: overview.md
docs/progress/: changelog.md
include/core/: dynamic_array.h  file_reader.h  hash_map.h  object_pool.h  ring_buffer.h
include/game/: cafe.h  customer.h  economy.h  menu.h  save.h
scripts/: build-web.sh
src/: main.cpp
src/audio/: audio.h
src/audio/macos/: macos_audio.mm
src/audio/web/: web_audio.cpp
src/engine/: entity.cpp  entity.h  game_loop.cpp  game_loop.h  image.cpp  image.h  input_map.cpp  input_map.h  isometric.cpp  isometric.h  resource.cpp  resource.h  scene.cpp  scene.h  sprite_sheet.cpp  sprite_sheet.h
src/platform/: platform.h
src/platform/macos/: macos_platform.mm
src/platform/web/: web_platform.cpp
src/renderer/: renderer.h
src/renderer/metal/: metal_renderer.mm
src/renderer/webgl/: webgl_renderer.cpp
web/: shell.html
